--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--Bootstrap CDN-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <!--Bootstrap CSS-->
+  <link rel="stylesheet" 
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" 
+        crossorigin="anonymous">
+  
+  <!-- Font Awesome -->
+  <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
+        integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
+        crossorigin="anonymous">
+
   <title>Train Schedule</title>
 </head>
 
@@ -15,9 +26,10 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
-        <div class="jumbotron" style="color: white; background-color: #6d532b; text-align: center;">
+        <div class="jumbotron text-center bg-info text-white">
           <h1>Anytime is Train Time</h1>
           <p>Choo Choo. Chee Chee</p>
+          <p>Add a Train with its starting time and frecuency and the app will calculate the next train arrival time and amount of time left of waiting.</p>
         </div>
       </div>
     </div>
@@ -29,7 +41,7 @@
             <strong>Current Train Schedule</strong>
           </div>
           <div class="card-body">
-            <table class="table ">
+            <table class="table table-hover">
               <thead>
                 <tr>
                   <th>Train Name</th>
@@ -44,50 +56,75 @@
               </tbody>
             </table>
           </div>
+          <div class="card-footer bg-white">
+            <button type="button" 
+                    class="btn btn-lg font-weight-bold" 
+                    data-toggle="modal" 
+                    data-target="#addTrainDlg"
+                    style="background-color: #2c75c3; color: white; border-radius: 50%; float:right;">
+                    &plus;
+            </button>
+          </div>
         </div>
       </div>
     </div>
 
+  </div> <!-- end of container -->
 
-    <div class="row mt-4 mb-4">
-      <div class="col-lg-12">
-        <div class="card" style="border-color: #2c75c3;">
-          <div class="card-header" style="background-color: #2c75c3; color: white;">
-            <strong>Add Train</strong>
+
+  <!-- Modal addTrainDlg Dialog-->
+  <div class="modal fade" id="addTrainDlg" tabindex="-1" role="dialog" aria-labelledby="addTrainDlgLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        
+          <div class="card" style="border-color: #2c75c3;">
+              <div class="card-header" style="background-color: #2c75c3; color: white;">
+                <strong>Add Train</strong>
+              </div>
+              <div class="card-body">
+                <form role="form">
+                  <div class="form-group">
+                    <label for="train-name">Train Name</label>
+                    <input type="text" class="form-control" id="trainName">
+                  </div>
+                  <div class="form-group">
+                    <label for="destination">Destination</label>
+                    <input type="text" class="form-control" id="destination">
+                  </div>
+                  <div class="form-group">
+                    <label for="first-train">First Train Time (HH:mm AM/PM)</label>
+                    <input type="time" class="form-control" id="firstTrain" onchange="showFirstTime()">
+                  </div>
+                  <div class="form-group">
+                    <label for="frequency">Frequency (min)</label>
+                    <input type="text" class="form-control" id="frequency">
+                  </div>
+                  <div class="form-group">
+                    <button type="button" class="btn" id="submitBtn" data-dismiss="modal" style="color: white; background-color: #2c75c3;">Submit</button>
+                  </div>
+                </form>
+              </div>
+            </div>
           </div>
-          <div class="card-body">
-            <form role="form">
-              <div class="form-group">
-                <label for="train-name">Train Name</label>
-                <input type="text" class="form-control" id="trainName">
-              </div>
-              <div class="form-group">
-                <label for="destination">Destination</label>
-                <input type="text" class="form-control" id="destination">
-              </div>
-              <div class="form-group">
-                <label for="first-train">First Train Time (HH:mm)</label>
-                <input type="time" class="form-control" id="firstTrain">
-              </div>
-              <div class="form-group">
-                <label for="frequency">Frequency (min)</label>
-                <input type="text" class="form-control" id="frequency">
-              </div>
-              <div class="form-group">
-                <button type="button" class="btn" id="submitBtn" style="color: white; background-color: #2c75c3;">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
 
-  <!-- Added 6/27/2018 direct on master branch -->
+
   <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <!-- Boostrap JS -->
+  <!--
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <!-- Firebase -->
+  <!--
   <script src="https://www.gstatic.com/firebasejs/5.1.0/firebase.js"></script>
+  -->
+  <script src="https://www.gstatic.com/firebasejs/5.6.0/firebase.js"></script>
   <!-- moment JS -->
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
   <!-- Link to our Javascript -->
