--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
           </div>
           <div class="card-footer bg-white">
             <button type="button" 
-                    class="btn btn-lg font-weight-bold" 
+                    class="btn btn-lg font-weight-bold rounded-circle" 
                     data-toggle="modal" 
                     data-target="#addTrainDlg"
-                    style="background-color: #2c75c3; color: white; border-radius: 50%; float:right;">
-                    &plus;
+                    style="background-color: #2c75c3; 
+                           color: white; 
+                           font-size:16px; 
+                           width: 48px;
+                           height: 48px;
+                           float:right;">
+                    <i class="fas fa-plus"></i>
             </button>
           </div>
         </div>
@@ -79,7 +84,7 @@
         
           <div class="card" style="border-color: #2c75c3;">
               <div class="card-header" style="background-color: #2c75c3; color: white;">
-                <strong>Add Train</strong>
+                <strong>Add Train (press ESC to cancel)</strong>
               </div>
               <div class="card-body">
                 <form role="form">
